<resources>
    <string name="app_name">WhatDish</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>

    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="get_know">Get to know</string>
    <string name="feature">Feature</string>
    <string name="tap_know">Tap to know</string>
    <string name="how_work">How the app work</string>
    <string name="take_pic">Take picture</string>
    <string name="get_gallery">Get from gallery</string>

    <string name="page_detail_title">Detail Page</string>
    <string name="food_title">Title</string>
    <string name="food_content">Title of the food</string>
    <string name="information_title">Information</string>
    <string name="information_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur lobortis urna nunc, a varius justo scelerisque ut.</string>

    <string name="desc_main_hero_1">How the app work</string>
    <string name="desc_main_hero_2">Take Picture</string>
    <string name="desc_main_hero_3">Get from gallery</string>

    <string name="desc_img_intro_1">Illustrate 1</string>
    <string name="desc_img_intro_2">Illustrate 2</string>
    <string name="desc_img_intro_3">Illustrate 3</string>
    <string name="desc_img_intro_4">Illustrate 4</string>
    <string name="text_head_intro_1">Get the Food</string>
    <string name="text_head_intro_2">Wait</string>
    <string name="text_head_intro_3">Ta-Daa! Here the magic</string>
    <string name="text_head_intro_4">Try Now</string>

    //content
    <string name="text_content_intro_1">
        Prepare the object food you want to identify.\nAs long as it is food and not obtained from stealing it should be fine.
    </string>

    <string name="text_content_intro_2">
        After selecting the image via your camera or gallery. Wait a moment for the system to finish process.\nThe processing shouldn\'t last as long as you conquer the world.
    </string>

    <string name="text_content_intro_3">
        Finally the result of your photo successfully processed and data from your food is displayed.\nUnfortunately only food data is displayed not your soul mate.
    </string>

    <string name="text_content_intro_4">
        If you interested. Be one of the good people who have tried it.
    </string>

    //toast
    <string name="t_camera_required">Camera Permission is Required to Use camera</string>
    <string name="t_upload_success">Image is on progress</string>
    <string name="t_upload_failed">Failed send image to system</string>

    <string name="err_try_again">Can\'t process your request right now\nTry again later</string>
    <string name="err_failed">Failed to process your request.</string>

</resources>