<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/informLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">

            <TextView
                android:text="@string/food_title"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/custom_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardElevation="2dp"
                app:cardMaxElevation="4dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="30dp">
                    <ImageView
                        android:id="@+id/iv_food"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        tools:src="@color/pink_kid"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:id="@+id/tv_food_title"
                        android:text="@string/food_content"
                        android:layout_below="@id/iv_food"
                        android:gravity="center"
                        android:layout_marginTop="14dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/custom_black3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardElevation="2dp"
                app:cardMaxElevation="4dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="30dp">
                    <TextView
                        android:id="@+id/tv_information_title"
                        android:text="@string/information_title"
                        android:textSize="16sp"
                        android:textColor="@color/custom_black3"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <ListView
                        android:id="@+id/lvInfo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:overScrollMode="never"
                        android:scrollbarSize="0dp"
                        android:layout_marginTop="16dp"
                        android:layout_below="@id/tv_information_title" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:padding="8dp"
                android:text="@string/back"
                android:textAllCaps="true"
                android:textColor="@color/custom_black3"
                android:textSize="16sp"
                android:layout_gravity="end"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>